kb: add/update topics java-fundamentals, oop-principles-in-java, jvm-internals-class-loading, garbage-collection-algorithms, multithreading-concurrency-in-java